# ex1_filesLibrary

./: .gitignore  CMakeLists.txt  README.txt.txt  Terminal.cpp  Terminal.h  UniqFileNotFoundException.h  dirNotExistException.h  directoryExistException.h  main.cpp  outOfUniqFileRangeException.h  uniqFilesCollection.cpp  uniqFilesCollection.h  uniqueFile.cpp  uniqueFile.h
